--- a/app/src/main/res/layout/activity_feedback_popup.xml
+++ b/app/src/main/res/layout/activity_feedback_popup.xml
@@ -5,19 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="510dp"
     tools:context=".RulesPopup"
-    android:background="#faf1b4">
+    android:background="#e0f0e3">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="#ffff00"
+        android:background="#9370db"
         android:id="@+id/TopMargin">
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="10dp"
         android:layout_height="match_parent"
-        android:background="#ffff00"
+        android:background="#9370db"
         android:id="@+id/LeftMargin"
         android:orientation="horizontal">
     </LinearLayout>
@@ -25,7 +25,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="#ffff00"
+        android:background="#9370db"
         android:layout_alignParentBottom="true"
         android:id="@+id/BottomMargin">
     </RelativeLayout>
@@ -33,7 +33,7 @@
     <LinearLayout
         android:layout_width="10dp"
         android:layout_height="match_parent"
-        android:background="#ffff00"
+        android:background="#9370db"
         android:layout_alignParentRight="true"
         android:id="@+id/RightMargin"
         android:orientation="horizontal">
