Added a seekbar (volume slider) to the homepage xml, setup page xml and the gamepage xml.

--- a/app/src/main/res/layout/activity_setup_page.xml
+++ b/app/src/main/res/layout/activity_setup_page.xml
@@ -8,6 +8,13 @@
     android:padding="5dp"
     tools:context=".SetupPage">
 
+    <SeekBar
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/volControl">
+
+    </SeekBar>
+
     <EditText
         android:id="@+id/playerTwoName"
         android:layout_width="150dp"
