Fixed position of unmute button on homepage, fixed constraints on buttons and textviews on homepage, Messed around with new fonts

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -20,12 +20,12 @@
         android:id="@+id/unmuteButtonGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:background="@android:color/transparent"
         android:onClick="unmuteSoundGame"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/muted" />
@@ -49,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
+        android:fontFamily="@font/permanent_marker"
         android:gravity="center"
         android:text="@string/turn_color"
         android:textColor="@color/black"
@@ -532,45 +533,44 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
         android:layout_marginTop="104dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="613dp"
+        android:fontFamily="@font/permanent_marker"
         android:gravity="center"
         android:text="PLAYER TWO PIECES"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/playerOneHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
+        android:fontFamily="@font/permanent_marker"
         android:gravity="center"
         android:text="PLAYER ONE PIECES"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.839"
+        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/ExitGameButton"
-        android:layout_width="127dp"
-        android:layout_height="61dp"
+        android:layout_width="110dp"
+        android:layout_height="60dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="658dp"
-        android:layout_marginEnd="268dp"
         android:layout_marginBottom="12dp"
         android:background="@null"
         android:onClick="exit"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
@@ -581,33 +581,31 @@
         android:layout_width="110dp"
         android:layout_height="60dp"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="658dp"
-        android:layout_marginEnd="139dp"
         android:layout_marginBottom="12dp"
         android:background="@null"
         android:onClick="reset"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/resetgamebutton" />
 
     <ImageButton
         android:id="@+id/ChangePiecesButton"
         android:layout_width="110dp"
         android:layout_height="60dp"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="659dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="11dp"
         android:background="@null"
         android:onClick="reset"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.92"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.982"
         app:srcCompat="@drawable/changepiecesbutton" />
 
     <ImageButton
