--- a/app/src/main/res/layout/activity_setup_page.xml
+++ b/app/src/main/res/layout/activity_setup_page.xml
@@ -340,6 +340,7 @@
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+        android:fontFamily="sans-serif"
         android:hint="Enter Your Name"
         android:inputType="text"
         android:maxLength="12"
