--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -5,7 +5,7 @@
     android:id="@+id/custom_toast_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#faf1b4"
+    android:background="#e0f0e3"
     android:padding="5dp"
     tools:context=".SetupPage">
 
@@ -13,7 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/toast2"
+        android:src="@drawable/customtoast2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
