--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,48 +49,6 @@
         app:srcCompat="@drawable/muted" />
 
 
-    <ImageButton
-        android:id="@+id/playButton"
-        android:layout_width="340dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="156dp"
-        android:background="@null"
-        android:onClick="goToSetupPage"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/playbutton" />
-
-    <ImageButton
-        android:id="@+id/rulesButton"
-        android:layout_width="165dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="72dp"
-        android:background="@null"
-        android:onClick="rulesPopupMain"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.126"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/rulesbutton" />
-
-    <ImageButton
-        android:id="@+id/contactUsButton"
-        android:layout_width="165dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="72dp"
-        android:background="@null"
-        android:onClick="feedbackPopup"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.861"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/contactusbutton" />
-
     <LinearLayout
         android:id="@+id/dim_layout_main"
         android:layout_width="match_parent"
@@ -106,8 +64,9 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="416dp"
-        android:layout_height="527dp"
+        android:id="@+id/constraintLayout"
+        android:layout_width="413dp"
+        android:layout_height="510dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="240dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -146,6 +105,70 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/MorrisText"
             app:srcCompat="@drawable/boardbarebone" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="414dp"
+        android:layout_height="252dp"
+        tools:layout_editor_absoluteY="595dp">
+
+        <ImageButton
+            android:id="@+id/rulesButton"
+            android:layout_width="165dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="214dp"
+            android:background="@null"
+            android:onClick="rulesPopupMain"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/playButton"
+            app:srcCompat="@drawable/rulesbutton" />
+
+        <ImageButton
+            android:id="@+id/contactUsButton"
+            android:layout_width="165dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="213dp"
+            android:layout_marginEnd="33dp"
+            android:background="@null"
+            android:onClick="feedbackPopup"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/playButton"
+            app:srcCompat="@drawable/contactusbutton" />
+
+        <ImageButton
+            android:id="@+id/playButton"
+            android:layout_width="340dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginEnd="35dp"
+            android:background="@null"
+            android:onClick="goToSetupPage"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/playbutton" />
+
+        <ImageButton
+            android:id="@+id/quickPlayButton"
+            android:layout_width="340dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="7dp"
+            android:background="@null"
+            android:onClick="goToSetupPage"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rulesButton"
+            app:srcCompat="@drawable/quickplaybutton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
