--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,8 +65,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="413dp"
-        android:layout_height="510dp"
+        android:layout_width="411dp"
+        android:layout_height="501dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="240dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
             android:layout_height="80dp"
             android:layout_marginStart="17dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="329dp"
+            android:layout_marginBottom="300dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="414dp"
         android:layout_height="252dp"
-        tools:layout_editor_absoluteY="595dp">
+        android:layout_marginTop="595dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:id="@+id/rulesButton"
@@ -163,7 +167,6 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="7dp"
             android:background="@null"
-            android:onClick="goToSetupPage"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
