--- a/app/src/main/res/layout/activity_setup_info.xml
+++ b/app/src/main/res/layout/activity_setup_info.xml
@@ -142,7 +142,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="40sp"
         android:layout_below="@id/Rules4"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
