Turned the setup_info xml text size and image views to px so that it fits android screens much better and adjusted the dialog.getWindow screen size.

--- a/app/src/main/res/layout/activity_setup_info.xml
+++ b/app/src/main/res/layout/activity_setup_info.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="656dp"
+    android:layout_height="1700px"
     tools:context=".SetupInfo"
     android:background="#e0f0e3">
 
@@ -42,12 +42,12 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="78px"
         android:layout_below="@id/TopMargin"
         android:id="@+id/Rules"
         android:textColor="@color/black"
         android:gravity="center"
-        android:textSize="36sp"
+        android:textSize="46px"
         android:text="HOW TO PLAY">
 
     </TextView>
@@ -55,20 +55,20 @@
     <TextView
         android:id="@+id/Rules1"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="70px"
         android:layout_below="@+id/Rules"
         android:layout_toLeftOf="@id/RightMargin"
         android:layout_toRightOf="@id/LeftMargin"
         android:gravity="center"
         android:text="To proceed to the game page you must press one of these buttons"
         android:textColor="@color/black"
-        android:textSize="20sp">
+        android:textSize="30px">
 
     </TextView>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="90px"
         android:layout_below="@id/Rules1"
         android:id="@+id/VsHumanButton"
         android:src="@drawable/playvshumanbutton"
@@ -79,22 +79,23 @@
     <TextView
         android:id="@+id/Rules2"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="100px"
         android:layout_below="@+id/VsHumanButton"
         android:layout_toRightOf="@id/LeftMargin"
         android:layout_toLeftOf="@id/RightMargin"
         android:gravity="center"
         android:text="Once you have selected your choice, type in your name in the space provided"
         android:textColor="@color/black"
-        android:textSize="20sp">
+        android:textSize="30px">
 
     </TextView>
 
     <ImageView
         android:id="@+id/InsertNameButton"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="90px"
         android:layout_below="@id/Rules2"
+        android:layout_marginTop="9px"
         android:scaleX="1.5"
         android:scaleY="1.5"
         android:src="@drawable/insert_name">
@@ -106,11 +107,11 @@
         android:layout_below="@+id/InsertNameButton"
         android:layout_toRightOf="@id/LeftMargin"
         android:layout_toLeftOf="@id/RightMargin"
-        android:layout_height="99dp"
+        android:layout_height="99px"
         android:id="@+id/Rules3"
         android:textColor="@color/black"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="30px"
         android:text="Once you have typed in your name select the shape you want and the color">
 
     </TextView>
@@ -118,7 +119,7 @@
     <ImageView
         android:id="@+id/secondButton"
         android:layout_width="match_parent"
-        android:layout_height="99dp"
+        android:layout_height="110px"
         android:layout_below="@id/Rules3"
         android:src="@drawable/customize_pieces">
 
@@ -128,28 +129,29 @@
     <TextView
         android:id="@+id/Rules4"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="90px"
         android:layout_below="@+id/secondButton"
-        android:layout_toRightOf="@id/LeftMargin"
+        android:layout_marginTop="10px"
         android:layout_toLeftOf="@id/RightMargin"
-        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/LeftMargin"
         android:gravity="center"
         android:text="You may now start the game by tapping the start game button."
         android:textColor="@color/black"
-        android:textSize="20sp">
+        android:textSize="30px">
 
     </TextView>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40sp"
+        android:layout_height="40px"
         android:layout_below="@id/Rules4"
-        android:layout_marginLeft="9dp"
-        android:layout_marginRight="9dp"
+        android:layout_marginLeft="9px"
+        android:layout_marginRight="9px"
+        android:layout_marginTop="20px"
         android:layout_toRightOf="@id/LeftMargin"
         android:text="TAP ANYWHERE OUTSIDE OF THE POPUP SCREEN TO EXIT"
         android:textColor="@color/red"
-        android:textSize="14sp">
+        android:textSize="24px">
 
     </TextView>
 
